# SegModels

./: .gitignore  README.md  catalogue.py  dataloader.py  factory.py  metrics.py  pyproject.toml  requirements.txt  wrappers.py
.github/workflows/: tests.yml
seg_models/: __init__.py  train.py
test/: test_inference.py
