[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seg_models"
version = "0.1.0"
description = "Segmentation models and wrappers"
# Every item in the list needs quotes!
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "segmentation-models-pytorch>=0.3.3",
    "transformers>=4.26.0",
    "datasets>=2.10.0",
    "accelerate>=0.20.0",
    "albumentations>=1.3.0",
    "opencv-python>=4.7.0",
    "pillow>=9.5.0",
    "scikit-learn>=1.2.0",
    "scikit-image>=0.20.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tensorboard>=2.13.0",
    "wandb>=0.15.0",
    "timm>=0.9.0",
    "pytorch-lightning>=2.0.0",
]

[tool.setuptools]
packages = ["seg_models"]
